# megara

./: .gitignore  main.py  pyproject.toml
etc/: excel_to_db.py  log_config.yaml  paths.py  settings.py
megara/: combinaciones.py  compresión.py  cortante.py  definiciones.py  flexión.py  formulas.py  predimensionamiento.py  secciones.py
scripts/: ejemplo_compresión.py  ejemplo_flexión_1.py  ejemplo_flexión_2.py
